namespace Game.Scripts.Utilities
{
    public static class Tags
    {
        public const string Idle = "Idle";
        public const string DropKick = "DropKick";
        public const string GreatSwordJumpAttack = "GreatSwordJumpAttack";
        public const string GreatSwordSlash = "GreatSwordSlash";
        public const string JumpAttack = "JumpAttack";
        public const string SittingClap = "SittingClap";
        public const string StandingUp = "StandingUp";
        public const string FlyingKneePunchCombo = "FlyingKneePunchCombo";
    }
}